force-app/main/default/objects/Gala_Table__c/Gala_Table__c.object-meta.xml
<CustomObject>
    <description>A physical table at the gala, tied to the purchasing Opportunity. Carries capacity and fills up with guests over time (a table may be partially filled); a major sponsor can have several. Gala Event Gifts. Author: Jason Ott.</description>
    <label>Gala Table</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gala Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>