force-app/main/default/objects/Gala_Table__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Number of seats at this table (defaulted from the level; typically 10). Gala Event Gifts / Jason Ott.</description>
    <label>Capacity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>