force-app/main/default/objects/Gala_Table__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>The table host / captain. Gala Event Gifts / Jason Ott.</description>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hosted Gala Tables</relationshipLabel>
    <relationshipName>Hosted_Gala_Tables</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>