force-app/main/default/objects/Gala_Table__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The gala purchase that paid for this table (the hub). Gala Event Gifts / Jason Ott.</description>
    <label>Purchase (Opportunity)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gala Tables</relationshipLabel>
    <relationshipName>Gala_Tables</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>