force-app/main/default/objects/Gala_Table__c/fields/Seats_Filled__c.field-meta.xml
<CustomField>
    <fullName>Seats_Filled__c</fullName>
    <description>How many guests are assigned to this table (maintained by automation, Phase B). Gala Event Gifts / Jason Ott.</description>
    <label>Seats Filled</label>
    <defaultValue>0</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>