force-app/main/default/objects/Gala_Table__c/fields/Seats_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Seats_Remaining__c</fullName>
    <description>Open seats at this table = Capacity - Seats Filled. Shows partially-filled tables at a glance. Gala Event Gifts / Jason Ott.</description>
    <formula>BLANKVALUE(Capacity__c, 0) - BLANKVALUE(Seats_Filled__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>